--- a/css/media.css
+++ b/css/media.css
@@ -8,10 +8,24 @@
     #work .gallery .nav .nav-item .nav-link{
         font-size: 11px;
     }
+    #services .item .item-h2{
+        font-size: 23px;
+    }
 
 }
 /* Малые девайсы («ландшафтные», < 768px)*/
 @media (max-width: 767.98px) {
+    header .header-btn form .pole{
+        width: 100%;
+        padding: 0;
+        height: 50px;
+        text-align: center;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    header .header-btn form .btn-sub{
+        width: 100%;
+    }
     #bottom-info .item:after{
         content: none
     }
